Enhance user authentication and database setup features. Added new scripts for database initialization and setup in package.json. Improved server startup logic to check and synchronize database schema, and added detailed error handling for database connection issues. Updated authentication controller to include comprehensive user registration, login, and password management functionalities, along with audit logging. Removed unused department entity and adjusted user entity structure. Enhanced API documentation and added health check and debug endpoints for better monitoring.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
+    "init-db": "node scripts/init-database.js",
+    "setup": "npm run init-db && npm run dev",
     "typeorm": "typeorm-ts-node-commonjs",
     "migration:generate": "npm run typeorm migration:generate -- -d src/config/typeorm.config.js",
     "migration:run": "npm run typeorm migration:run -- -d src/config/typeorm.config.js",
