Update environment configuration and enhance package dependencies
- Added ACCESS_TOKEN_EXPIRY variable to env.example for configurable access token expiration.
- Updated package-lock.json and package.json to reflect the new project name 'Kismatx-project-backend' and added 'date-fns-tz' dependency.
- Upgraded 'node-cron' to version 4.2.1 for improved scheduling capabilities.
- Removed obsolete test files and documentation related to wallet management.
- Introduced new settings and game management routes in the admin panel for better functionality.

--- a/env.example
+++ b/env.example
@@ -8,6 +8,8 @@ DB_NAME=your_database
 # JWT Configuration
 ACCESS_TOKEN_SECRET=your_super_secret_access_token_key_here
 REFRESH_TOKEN_SECRET=your_super_secret_refresh_token_key_here
+# Access Token Expiry (format: '15m', '1h', '24h', '7d', etc. - default: '24h')
+ACCESS_TOKEN_EXPIRY=24h
 
 # Server Configuration
 PORT=5001
