--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "your-project-backend",
+  "name": "Kismatx-project-backend",
   "version": "1.0.0",
   "type": "module",
   "main": "src/server.js",
@@ -15,7 +15,14 @@
     "migration:run": "npm run typeorm migration:run -- -d src/config/typeorm.config.js",
     "migration:revert": "npm run typeorm migration:revert -- -d src/config/typeorm.config.js"
   },
-  "keywords": ["nodejs", "express", "typeorm", "jwt", "api", "backend"],
+  "keywords": [
+    "nodejs",
+    "express",
+    "typeorm",
+    "jwt",
+    "api",
+    "backend"
+  ],
   "author": "Your Name",
   "license": "ISC",
   "dependencies": {
@@ -24,6 +31,7 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "dotenv": "^16.4.7",
     "exceljs": "^4.4.0",
     "express": "^4.21.2",
@@ -36,6 +44,7 @@
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.1",
+    "node-cron": "^4.2.1",
     "nodemailer": "^6.10.0",
     "pdfkit": "^0.17.1",
     "pdfmake": "^0.2.20",
