bug fixed of cron for backup

--- a/dbbackup/package.json
+++ b/dbbackup/package.json
@@ -9,7 +9,7 @@
     "backup:schedule": "node scheduler.js",
     "restore": "node restore.js",
     "setup": "node setup.js",
-    "pm2:start": "pm2 start ecosystem.config.js",
+    "pm2:start": "pm2 start ecosystem.config.cjs",
     "pm2:stop": "pm2 stop kismatx-backup-scheduler",
     "pm2:restart": "pm2 restart kismatx-backup-scheduler",
     "pm2:logs": "pm2 logs kismatx-backup-scheduler",
